[package]
name = "redproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ={ version = "1.0.66"}
clap = { version = "4.0.11", features = ["derive"] }
pretty_env_logger = { version = "0.4.0" }
log = { version = "0.4.17" }
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", rev = "e4dcc98"}